@@ -7,10 +7,12 @@ DIST gitlab-pages-0.4.1.tar.bz2 206039 SHA256 ed856e1d549597b5f1b7aa5d006538aa4d
 DIST gitlab-pages-0.4.2.tar.bz2 209079 SHA256 391301c4f5cc288ed1a6a451e5273899518b83529c787c0a5f724161005ca786 SHA512 74e4cd810712d1506b927f75b63dc4fca09802097579d456cfada94f06c59b05f5e11309dc6fbd0f4c701243933688afa89ef8c1cf921f15536f505c7dec99f4 WHIRLPOOL 0f352db3977565b7c41609dcbed9161fcc99398fc56aa535255a69d12169b75b985410964a9adce60ed9eb8b88a68128dac9a9528f85ec62bae468fb8907e182
 DIST gitlab-pages-0.4.4.tar.bz2 209229 SHA256 e3024edf56a61e8705f4fb5db2141087f16db1fe550d116e950137b92b201720 SHA512 5618e659ddd91a3398cd7eb00e38292e3bc88b31af91c02815dfe810a5a478d7eb2314430478e4e2971f36a44ac37a2c9ed01bd357d1f8737a8a63fc697821e7 WHIRLPOOL 52cec732705285e2270ad1fda43088ce0c6e0dbf652f7cc29e77dd68cb23ebe913c0c71af0337a59f77f351b207e79469bdbcf5531f6ee6714695af0d08c3497
 DIST gitlab-pages-0.5.0.tar.bz2 224094 SHA256 b6fe0baec3f1cf7c3dbdce1aa8d732a1510a9d45ffab1b5946c397a95acb8ece SHA512 8f8b4006e44c87f79addc3b87c392e596d286d3d96eb2aa50f0e2a90e3a4e0e5fc2258fdb7c623e743323c88b22e61df9c06015fbc384a8d75369fc9bb64b98d WHIRLPOOL c6d10c0c6dc674d931536daaac35953c792c6e47d9b92033e6c29d2dcbb82e7ad6345b519207ccd6fddbf061b0f0800c8908915854e028302a8357cd45cefb2f
+DIST gitlab-pages-0.5.1.tar.bz2 224270 SHA256 b61ed9c12baf197dfd466342301ccb3160fbfe8fe61270a31a72e5503504f50b SHA512 973615efb54290c0d6b41455d91bf6343d8b09687565b8ad5e72cd69faea99cc3819c3aabea9e7cb94414a61835104e052affb1072ed62b1e2f343517eb94184 WHIRLPOOL 421500d5f0cee352a95dd59e9b799a9b3fd6b7639c656bd54fa601e061ddaa5062fa0b6a567bfce2543dcf9755b824a81362171c779db2f3f238faf760a6c472
 EBUILD gitlab-pages-0.4.0.ebuild 1944 SHA256 9ea918e126d4edc0fb785eae43f618a7744bd0fb4bd342f09725633b3cbd9f3d SHA512 7b7364e999fbabe7ef48da010ed6b799c9b4af8ee83f32d4b138cc6ac16acdcd5ed980bf217ff405c03a9ef9bf589ce95c3cad64a101d8b0f6eb0d869e0ef014 WHIRLPOOL 2ce6e870eaaf8b7522c1ec7bbf91a843a94a278de77d44bbbe4d74f8ff36aa56dd912eae2e520bac82550a4352c5366098749d7cf1893e5e50be6b708ad1aaa3
 EBUILD gitlab-pages-0.4.1.ebuild 1944 SHA256 f489ea11f220c84e099cff1ce0e960c02498846e90e22de23a3126d4cc9e883d SHA512 18391744f540507bbaee676854ca6b264eb08dcc93fe0a0c6f3bdcc34f3ee505ecb4db7f45f98a7ac2efa722f42f0aab3f174024f5c6a6f7e206fa0e08b6ebee WHIRLPOOL 182e67c00c30485fcb69d1061c397e16e18bfa62a82d729647fd795b36a5ae486a93c5d28f86ceed1b7230f3807732b241bf37532ccae0f789e90fa89ecbfc53
 EBUILD gitlab-pages-0.4.2-r1.ebuild 1434 SHA256 477a4be7f099ed542dc7f69b2008c08d00593225e63a7c652139b4ff1e1feb46 SHA512 88923ff7da8bbb21eca3044bfaf8a59dd9a6fedc96bbeb1739a591ba2054ff1e0d789aeee7b634a70eb1627cfe3ad50361577555ccc5fedb1523e6af3518a4af WHIRLPOOL d94e14712020c5542a5b41c8450a80824fc42d585859a9527812ecb53a452101977f973badce04e2fdb239d87ad465d4ca81a848dbfde67044031b6df0f4a039
 EBUILD gitlab-pages-0.4.4.ebuild 1436 SHA256 8f496c129cd8bff8dca1d882713ed9f460458bb887c34a2926c03e4057e893d6 SHA512 a4c90b718ef63888e454c4a48949a9713dfa44f354556a840f6e78b86e46d90f5c922c83ea3b2b35fdb5ab5168f6cdff1004666e3dba0b6acee95aecde040afb WHIRLPOOL d18824f792e1b541f833e3fcedd049956f8177bd4c5cdf75dc6e6e28aa983be69a7475d82b6a1427a87619d288321533019aad0802cce1bfbc118a1c76644b47
 EBUILD gitlab-pages-0.5.0.ebuild 1436 SHA256 b4aabfef9811f4e591dcd71bbd7d7a399c10233be162c0cf5f903effb1ef0f98 SHA512 cc076544c219b497e39e080e469ce2b39ab4b1bcb8a396be9655af963ea35271548bd4446c1435690cfb459f510901ba1db8dd1d0574a4567b3248fc2e03a582 WHIRLPOOL cd087bc65f0eebedefea46f10c176f0163b77b12b71c89f738f94d223f1db2811fc813b49285fc35719c8430ad4ebe0d6362cdc38f2ac13e9cca7133e080b78f
-MISC ChangeLog 1901 SHA256 dcfafc59b5615638b33d4afa9bc1eca92d3a6a35708bb136e5b77fc358a10569 SHA512 10b505ec9e360a0a2538a930aed976e46784d90f3ae562960427408cbe5dbb303814cd7e00c04689c1c4a9c548c17c475e0918bd3dfe61f4fb208a2b92a7991b WHIRLPOOL 9bcc9012b820d26c00f8cf2cec34f8b76c41f729737ae09a773235e9b5ff4edb1861e3ac61af2384162524cc62b53177e4efdfd4d85a6ddeb1234f3fd7e810a8
+EBUILD gitlab-pages-0.5.1.ebuild 1436 SHA256 4832678c91a3ac6f68894a9512ee60e2037600a26d7883d72bf77857781c823f SHA512 9395ed1bed70268b5db9540491a2b16bad0f85aaf2b0f32c3307cc0f1acbbb7aa59b44d059d45621dac9ee7d1bf97b4fe0b3f8083001099b09a14b358c52ae37 WHIRLPOOL b3fc7ad05039d1a0e652ed0224c3e6ff76d4ae9bf1ef8114503e7cb73cb35a0e4de7550a06b108ee284e294e31c691872d6587ca58ebf6a9bed6b169de391903
+MISC ChangeLog 2095 SHA256 2cfe2c71a1358465ba1ad9a9cfc4ab380129c3ac60e509074a2d823a26ce3377 SHA512 8d63d90324ab21c7f15e69d0a16532b8de4d2a261200c559da3f2212e0668f5bff4366ff9a20ceaa68a5886462daeb1e3cc861bc7b67cacd4195644e245c66ee WHIRLPOOL 7822655c909d157edf8696e91f606641a3b02b5e921ef64ab6321880574b9236900347806239f920e0ce44e15236355c91600588b5001d0b398ca1c60fa414ad
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
